# yandex-oauth

./: .gitignore  README.md  README.rst  pyproject.toml  setup.py
.github/workflows/: codeql.yml
docs/: requirements.txt
docs/source/: conf.py  examples.rst  index.rst  license.rst  modules.rst  usage.rst  yandex_oauth.rst
docs/source/_static/: robots.txt
yandex_oauth/: __init__.py  yao.py
